--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,8 @@
+.html, body {
+  padding: 0;
+  margin: 0;
+}
+
 .App {
   text-align: center;
 }
@@ -15,6 +20,7 @@
   justify-content: center;
   align-items: center;
 }
+
 input {
   width: 250px;
   height: 40px;
